force-app/main/default/objects/Quote/fields/Billing_methodology_details__c.field-meta.xml
<CustomField>
    <fullName>Billing_methodology_details__c</fullName>
    <label>Billing methodology details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>