force-app/main/default/objects/Quote/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Opportunity Close Date</description>
    <formula>Opportunity.CloseDate</formula>
    <inlineHelpText>Close Date on Opportunity</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>