force-app/main/default/objects/Quote/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <defaultValue>&apos;USD&apos;</defaultValue>
    <description>Currency</description>
    <inlineHelpText>Currency Type</inlineHelpText>
    <label>Currency ISO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>