force-app/main/default/objects/Quote/fields/Duration_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Services__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Duration of services in months</description>
    <inlineHelpText>Duration of services in months</inlineHelpText>
    <label>Duration of Services (in Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>