force-app/main/default/objects/Quote/fields/Duration_of_Services_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Services_in_Months__c</fullName>
    <formula>VALUE(Opportunity.of_Months_for_Subs_Activation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is # of Months for Subs Activation from the opportunity. Edit it on the opportunity.</inlineHelpText>
    <label>Duration of Services (in Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>