force-app/main/default/objects/Quote/fields/End_Date_of_Services__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Services__c</fullName>
    <description>Subscription End Date from the Opportunity</description>
    <formula>Opportunity.Subscription_End_Date__c</formula>
    <inlineHelpText>Subscription End Date from the Opportunity</inlineHelpText>
    <label>End Date of Services</label>
    <type>Date</type>
</CustomField>