force-app/main/default/objects/Quote/fields/Hourly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Cost__c</fullName>
    <label>Hourly Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>