force-app/main/default/objects/Quote/fields/InApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>InApprovalProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is the quote in an approval process</description>
    <label>InApprovalProcess</label>
    <type>Checkbox</type>
</CustomField>