force-app/main/default/objects/Quote/fields/Net_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Net_Payment_Terms__c</fullName>
    <defaultValue>&apos;Due on receipt&apos;</defaultValue>
    <description>Net Payment Terms</description>
    <inlineHelpText>Net Payment Terms for Quote PDF</inlineHelpText>
    <label>Net Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>