force-app/main/default/objects/Quote/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <defaultValue>&apos;Due on Receipt&apos;</defaultValue>
    <description>Payment Due Date</description>
    <inlineHelpText>Payment Due Date</inlineHelpText>
    <label>Payment Due</label>
    <length>255</length>
    <type>Text</type>
</CustomField>