force-app/main/default/objects/Quote/fields/Sales_Excecutive__c.field-meta.xml
<CustomField>
    <fullName>Sales_Excecutive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sales Executive</inlineHelpText>
    <label>Sales_Excecutive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>