force-app/main/default/objects/Quote/fields/Service_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Acceptance_Date__c</fullName>
    <description>Date when Service was initiated</description>
    <inlineHelpText>Service Acceptance Date</inlineHelpText>
    <label>Service Acceptance Date</label>
    <type>Date</type>
</CustomField>