force-app/main/default/objects/Quote/fields/Subtotal_Non_recurring__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Non_recurring__c</fullName>
    <description>Subtotal non-recurring quote line items</description>
    <label>Subtotal Non-recurring</label>
    <summarizedField>QuoteLineItem.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Recurring__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>