force-app/main/default/objects/Quote/fields/Subtotal_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Recurring__c</fullName>
    <description>Subtotal of recurring quote line items</description>
    <label>Subtotal Recurring</label>
    <summarizedField>QuoteLineItem.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Recurring__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>