force-app/main/default/objects/Quote/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <defaultValue>&quot;Terms &amp; Conditions:&quot;</defaultValue>
    <label>Terms</label>
    <type>TextArea</type>
</CustomField>