force-app/main/default/objects/Quote/fields/Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions__c</fullName>
    <formula>&quot;1. Any customizations and services that are not an out-of-the box solution of AutoRABIT shall require additional professional services.&quot;+BR()+&quot;2. ** This quote is based on a direct purchase from the named customer above. Any payment processing charges, both direct and indirect, would be borne by the customer. &quot;+BR()+&quot;3. All travel and accommodation will be billed at actuals.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms &amp; Conditions</label>
    <type>Text</type>
</CustomField>