force-app/main/default/objects/Quote/fields/Who_will_AutoRABIT_pay_for_item__c.field-meta.xml
<CustomField>
    <fullName>Who_will_AutoRABIT_pay_for_item__c</fullName>
    <label>Who will AutoRABIT pay for item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>