force-app/main/default/objects/Quote/fields/X3rd_Party_Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Billing_Contact_Name__c</fullName>
    <label>3rd Party Billing Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>