force-app/main/default/objects/Quote/validationRules/POrequired_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>POrequired_mandatory</fullName>
    <active>false</active>
    <description>Making the Porequired field mandatory</description>
    <errorConditionFormula>ISPICKVAL(PO_Required__c, &apos;NO&apos;)</errorConditionFormula>
    <errorDisplayField>PO_Required__c</errorDisplayField>
    <errorMessage>Please indicate whether a PO is required for this quote</errorMessage>
</ValidationRule>